--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,11 +1,8 @@
 <div class="container">
-  <div class="row home-letter" style="width: 100vw;">
-    <div class="col-8" style="width: 100vw; margin: 0 auto;">
-      <%= link_to "会員登録", new_customer_registration_path, class: "btn btn-primary btn-block" %>
-    </div>
-
-    <div class="col-12 mt-3">
-      <div class="top-btn"><%= link_to "ログイン", new_customer_session_path, class: "btn btn-primary" %></div>
-    </div>
+  <div class="row" style="margin-top: 300px; height: 50px;">
+    <%= link_to "会員登録", new_customer_registration_path, class: "btn btn-primary mx-auto w-50", style: "line-height: 50px;" %>
+  </div>
+  <div class="row" style="margin-top: 50px; height: 50px;">
+    <%= link_to "ログイン", new_customer_session_path, class: "btn btn-primary mx-auto w-50", style: "line-height: 50px;" %>
   </div>
 </div>
