[Fix]顧客側レイアウト修正

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -17,6 +17,7 @@ footer {
 }
 
 body {
+  color: #00FF00;
   background-image: url("/assets/ykyujo.png");
   background-position: center;
   background-size: cover;
