--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,33 +1,36 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-  <div class="field">
-    <%= f.label :nickname %><br>
-    <%= f.text_field :nickname %>
+<div class="container">
+  <div class="row mt-5">
+    <h3 class="bg-dark">会員登録</h3>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <div class="row mt-3">
+    <div class="col-8 mx-auto">
+      <%= f.label :ニックネーム, class: "bg-dark" %><br />
+      <%= f.text_field :nickname, class: "form-control" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="row mt-3">
+    <div class="col-8 mx-auto">
+      <%= f.label :メールアドレス, class: "bg-dark" %><br />
+      <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="row mt-3">
+    <div class="col-8 mx-auto">
+      <%= f.label :パスワード, class: "bg-dark" %><br />
+      <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="row mt-3">
+    <div class="col-8 mx-auto">
+      <%= f.label :パスワード再入力, class: "bg-dark" %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+    </div>
   </div>
-<% end %>
+  <div class="row mt-5" style="justify-content: center;">
+    <%= f.submit "新規登録", class: "btn btn-primary" %>
+  </div>
+  <% end %>
+</div>
 
 <%= render "public/shared/links" %>
