--- a/app/views/public/searches/index.html.erb
+++ b/app/views/public/searches/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
-  <div class="row search" style="height: 100px; margin-top: 100px;">
-    <%= link_to "店舗から探す", stores_path, class: "btn btn-primary mx-auto w-50", style: "line-height: 100px;" %>
+  <div class="row" style="height: 100px; margin-top: 100px;">
+    <%= link_to "店舗から探す", stores_path, class: "btn btn-primary mx-auto w-75", style: "line-height: 100px;" %>
   </div>
-  <div class="row mt-5 search" style="height: 100px;">
-    <%= link_to "カテゴリーから探す", categories_path, class: "btn btn-warning mx-auto w-50", style: "line-height: 100px;" %>
+  <div class="row mt-5" style="height: 100px;">
+    <%= link_to "カテゴリーから探す", categories_path, class: "btn btn-warning mx-auto w-75", style: "line-height: 100px;" %>
   </div>
-  <div class="row mt-5 search" style="height: 100px;">
-    <%= link_to "エリアから探す", sale_areas_path, class: "btn btn-danger mx-auto w-50", style: "line-height: 100px;" %>
+  <div class="row mt-5" style="height: 100px;">
+    <%= link_to "エリアから探す", sale_areas_path, class: "btn btn-danger mx-auto w-75", style: "line-height: 100px;" %>
   </div>
 </div>
