[Fix]管理者閲覧権限の付与

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -18,7 +18,7 @@ footer {
 
 body {
   color: #00FF00;
-  background-image: url("/assets/ykyujo.png");
+  // background-image: url("/assets/ykyujo.png");
   background-position: center;
   background-size: cover;
   width: 100vw;
