--- a/app/views/public/new_gourmets/index.html.erb
+++ b/app/views/public/new_gourmets/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row mt-5 mb-3">
-    <h3 class="mx-auto">新着グルメ</h3>
+    <h3 class="mx-auto bg-dark">新着グルメ</h3>
   </div>
   <% @items.each do |item| %>
     <div class="card p-2 mt-3">
@@ -19,7 +19,6 @@
       </div>
     </div>
   <% end %>
-  </div>
   <div class="row">
     <h5 style="margin-bottom: 100px;"></h5>
   </div>
