--- a/app/views/public/rankings/index.html.erb
+++ b/app/views/public/rankings/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row mt-5 mb-3">
-    <h3 class="mx-auto">人気グルメランキング</h3>
+    <h3 class="mx-auto bg-dark">人気グルメランキング</h3>
   </div>
   <% @items.each do |item| %>
     <div class="card p-2 mt-3">
