--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,43 +1,47 @@
 <div class="container">
   <div class="row mt-5">
-    <h3>カート</h3>
+    <h3 class="bg-dark">カート</h3>
   </div>
-  <div class="row">
-    <% @cart_items.each do |cart_item| %>
-      <div class="card mt-3">
-        <div class="col-12">
+  <% @cart_items.each do |cart_item| %>
+    <div class="card p-2 mt-3 text-dark">
+      <div class="row">
+        <div class="col-4">
+          <div class="card-img-top"><%= image_tag cart_item.item.image, style: "width: 100%;" %></div>
+        </div>
+        <div class="col-8">
+          <h5 class="card-title long-name"><%= cart_item.item.name %></h5>
           <div class="row">
-            <div class="card-img-top">
-              <%= image_tag cart_item.item.get_image(500,350), style: "width: 100%;" %>
+            <div class="col-8">
+              <%= form_with model: @cart_item, url: cart_item_path(cart_item.id), method: :patch do |f| %>
+                <span>数量 <%= f.select :amount, *[1..5], {selected: cart_item.amount} %></span>
+                <span><%= f.submit "変更", class: "btn btn-primary btn-sm" %></span>
+              <% end %>
             </div>
-            <div class="col-6">
-              <div class="row">
-                <h5 class="card-title long-name"><%= cart_item.item.name %></h5>
-              </div>
-              <div class="row ml-3">
-                <p>単価 <%= cart_item.item.with_tax_price.to_s(:delimited) %> 円</p>
-              </div>
-            </div>
-            <div class="col-4">
-              <div class="row mt-2">
-                <%= form_with model: @cart_item, url: cart_item_path(cart_item.id), method: :patch do |f| %>
-                  <span>数量 <%= f.select :amount, *[1..5], {selected: cart_item.amount} %></span>
-                  <span><%= f.submit "変更", class: "btn btn-primary btn-sm" %></span>
-                <% end %>
-              </div>
-              <div class="row mt-3">
-                <p>小計 <%= cart_item.subtotal.to_s(:delimited) %> 円</p>
-              </div>
-            </div>
-            <div class="col-2 mt-5">
+            <div class="col-4 text-right">
               <p><%= link_to "削除", cart_item_path(cart_item.item_id), method: :delete, class: "btn btn-danger btn-sm" %></p>
             </div>
           </div>
         </div>
+        <div class="row mx-auto">
+          <p>価格 <%= cart_item.item.with_tax_price.to_s(:delimited) %> 円</p>
+        </div>
       </div>
-      <% @product_total += cart_item.subtotal %>
-    <% end %>
-  </div>
+      <div class="row">
+        <div class="col-12">
+          <div style= "border: dashed 1px;"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <h4 class="text-left">小計</h4>
+        </div>
+        <div class="col-6">
+          <h4 class= "text-right"><strong><%= cart_item.subtotal.to_s(:delimited) %> 円</strong></h4>
+        </div>
+      </div>
+    </div>
+    <% @product_total += cart_item.subtotal %>
+  <% end %>
   <div class="row mt-5">
     <strong class="mx-auto">合計金額 <span class="ml-3"><%= @product_total.to_s(:delimited) %> 円</span></strong>
   </div>
