--- a/app/views/public/stores/index.html.erb
+++ b/app/views/public/stores/index.html.erb
@@ -1,29 +1,29 @@
 <div class="container">
-  <div class="row mt-5 mb-3">
-    <h3>店舗一覧</h3>
+  <div class="row mt-5">
+    <h3 class="bg-dark">店舗一覧</h3>
   </div>
-  <div class="row">
-    <% @stores.each do |store| %>
-    <div class="col-6 mt-3">
-      <div class="card">
-        <%= link_to store_path(store.id), class: "text-dark" do %>
-          <div class="card-img-top"><%= image_tag store.get_image(200,200), style: "width: 100%;" %></div><br>
-          <h5 class="card-title long-name"><%= store.name %></h5>
-          <table class="table table-borderless text-center" style="line-height: 30%">
-            <tr>
-              <th>販売エリア</th>
-              <td><%= store.sale_area.name %></td>
-            </tr>
-            <tr>
-              <th>販売商品数</th>
-              <td><%= store.items.count %></td>
-            </tr>
-          </table>
-        <% end %>
+  <% @stores.each do |store| %>
+    <div class="card p-2 mt-3">
+      <div class="row">
+      <%= link_to store_path(store.id), class: "text-dark" do %>
+        <div class="col-12">
+          <div class="card-img-top"><%= image_tag store.image, style: "width: 100%;" %></div>
+        </div>
+        <div class="col-12 mt-1">
+          <i class="fas fa-store-alt"></i> <span style="font-size: 20px;"><strong><%= store.name %></strong></span>
+        </div>
+        <div class="row p-3">
+          <div class="col-6">
+            <i class="fas fa-map-pin"></i> <span><%= store.sale_area.name %></span>
+          </div>
+          <div class="col-6">
+            <span>販売商品数: <%= store.items.count %></span>
+          </div>
+        </div>
+      <% end %>
       </div>
     </div>
-    <% end %>
-  </div>
+  <% end %>
   <div class="row">
     <h5 style="margin-bottom: 100px;"></h5>
   </div>
