--- a/app/views/public/categories/show.html.erb
+++ b/app/views/public/categories/show.html.erb
@@ -1,22 +1,19 @@
 <div class="container">
   <div class="row mt-5 mb-3">
-    <h3><strong><%= @category.name %></strong>  一覧</h3>
+    <h3 class="bg-dark"><strong><%= @category.name %></strong>  一覧</h3>
   </div>
   <div class="row">
     <% @items.each do |item| %>
     <div class="col-6 mt-3">
       <div class="card">
         <%= link_to store_item_path(item.store_id, item.id), class: "text-dark" do %>
-          <div class="card-img-top"><%= image_tag item.get_image(200,200), style: "width: 100%;" %></div>
+          <div class="card-img-top"><%= image_tag item.image, style: "width: 100%;" %></div>
           <h5 class="card-title long-name"><%= item.name %></h5>
+          ￥ <%= item.with_tax_price.to_s(:delimited) %>
           <table class="table table-borderless table-sm" style="table-layout: fixed;">
             <tr>
-              <th width="35%">店舗名</th>
-              <td class="long-name" width="65%"><%= item.store.name %></td>
-            </tr>
-            <tr>
-              <th>販売価格</th>
-              <td><%= item.with_tax_price.to_s(:delimited) %> 円</td>
+              <th width="20%"><i class="fas fa-store-alt"></i></th>
+              <td class="long-name" width="80%"><%= item.store.name %></td>
             </tr>
           </table>
         <% end %>
