--- a/app/views/public/sale_areas/show.html.erb
+++ b/app/views/public/sale_areas/show.html.erb
@@ -1,15 +1,22 @@
 <div class="container">
-  <div class="row mt-5">
-    <h3><strong><%= @sale_area.name %></strong> 店舗一覧</h3>
+  <div class="row mt-5 mb-3">
+    <h3 class="bg-dark"><strong><%= @sale_area.name %></strong> 店舗一覧</h3>
   </div>
   <div class="row">
     <% @stores.each do |store| %>
     <div class="col-6 mt-3">
-      <%= link_to store_path(store.id) do %>
-        <%= image_tag store.get_image(200,200) %>
-        <p><%= store.name %></p>
-        <p>販売商品数:<span class="ml-3"><%= store.items.count %></span></p>
-      <% end %>
+      <div class="card">
+        <%= link_to store_path(store.id), class: "text-dark" do %>
+        <div class="card-img-top"><%= image_tag store.image, style: "width: 100%;" %></div>
+        <table class="table table-borderless table-sm" style="table-layout: fixed;">
+          <tr>
+            <th width="15%"><i class="fas fa-store-alt"></i></th>
+            <td class="card-title long-name" width="85%"><strong><%= store.name %></strong></td>
+          </tr>
+        </table>
+        <p class="text-center">販売商品数:<span class="ml-3"><%= store.items.count %></span></p>
+        <% end %>
+      </div>
     </div>
     <% end %>
   </div>
