--- a/app/views/public/stores/index.html.erb
+++ b/app/views/public/stores/index.html.erb
@@ -1,29 +1,29 @@
 <div class="container">
-  <div class="row mt-5">
+  <div class="row mt-5 mb-5">
     <h3 class="bg-dark">店舗一覧</h3>
   </div>
-  <% @stores.each do |store| %>
-    <div class="card p-2 mt-3">
-      <div class="row">
-      <%= link_to store_path(store.id), class: "text-dark" do %>
-        <div class="col-12">
-          <div class="card-img-top"><%= image_tag store.image, style: "width: 100%;" %></div>
-        </div>
-        <div class="col-12 mt-1">
-          <i class="fas fa-store-alt"></i> <span style="font-size: 20px;"><strong><%= store.name %></strong></span>
-        </div>
-        <div class="row p-3">
-          <div class="col-6">
-            <i class="fas fa-map-pin"></i> <span><%= store.sale_area.name %></span>
-          </div>
-          <div class="col-6">
-            <span>販売商品数: <%= store.items.count %></span>
-          </div>
-        </div>
-      <% end %>
+  <div class="row">
+    <% @stores.each do |store| %>
+    <div class="col-6 mt-3">
+      <div class="card">
+        <%= link_to store_path(store.id), class: "text-dark" do %>
+        <div class="card-img-top"><%= image_tag store.image, style: "width: 100%;" %></div>
+          <table class="table table-borderless table-sm" style="table-layout: fixed;">
+            <tr>
+              <th width="15%"><i class="fas fa-store-alt"></i></th>
+              <td class="card-title long-name" width="85%"><strong><%= store.name %></strong></td>
+            </tr>
+            <tr>
+              <th><i class="fas fa-map-pin"></i></th>
+              <td><%= store.sale_area.name %></td>
+            </tr>
+          </table>
+          <p class="text-center">販売商品数:<span class="ml-3"><%= store.items.count %></span></p>
+        <% end %>
       </div>
     </div>
-  <% end %>
+    <% end %>
+  </div>
   <div class="row">
     <h5 style="margin-bottom: 100px;"></h5>
   </div>
