--- a/app/views/public/stores/show.html.erb
+++ b/app/views/public/stores/show.html.erb
@@ -1,8 +1,29 @@
-<div class="container">
-  <div class="row mt-5 mb-3">
-    <h3 class="bg-dark"><%= @store.name %></h3>
+<div class="container" style="margin-top: 100px;">
+  <div class="card p-2 text-dark">
+    <div class="row">
+      <div class="col-12">
+        <div class="card-img-top"><%= image_tag @store.image, style: "width: 100%;" %></div>
+      </div>
+      <div class="col-12">
+        <table class="table table-borderless table-sm" style="table-layout: fixed;">
+          <tr>
+            <th width="10%"><i class="fas fa-store-alt"></i></th>
+            <td width="90%"><h4 class="long-name"><strong><%= @store.name %></strong></h4></td>
+          </tr>
+        </table>
+        <div class="row">
+          <div class="col-6">
+            <i class="fas fa-map-pin"></i>
+            <span><%= @store.sale_area.name %></span>
+          </div>
+          <div class="col-6">
+            <p class="text-center">販売商品数:<span class="ml-3"><%= @store.items.count %></span></p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="row">
+  <div class="row mt-3">
     <h4 class="bg-dark">販売商品一覧</h4>
   </div>
   <div class="row">
@@ -10,7 +31,7 @@
       <div class="col-6 mt-3">
         <div class="card">
           <%= link_to store_item_path(@store.id, item.id), class: "text-dark" do %>
-            <div class="card-img-top"><%= image_tag item.image, style: "width: 100%" %></div><br>
+            <div class="card-img-top"><%= image_tag item.image, style: "width: 100%" %></div>
             <h5 class="card-title long-name"><%= item.name %></h5>
             ￥ <%= item.with_tax_price.to_s(:delimited) %>
           <% end %>
