--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row mt-5">
     <h3>注文履歴</h3>
   </div>
-  <table class="table table-borderless">
+  <table class="table table-borderless table-dark">
     <thead>
       <th>購入日</th>
       <th>注文番号</th>
@@ -11,7 +11,7 @@
     <% @orders.each do |order| %>
       <tbody>
         <td>
-          <%= link_to order_path(order.id), class: "text-dark" do %>
+          <%= link_to order_path(order.id), class: "text-light" do %>
             <%= order.created_at.strftime('%Y/%m/%d') %>
           <% end %>
         </td>
