--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -10,8 +10,7 @@
       <p class="text-dark mx-auto">クレジットカード</p>
     </div>
   </div>
-  <div class="row mt-3"></div>
-  <div class="card">
+  <div class="card mt-3">
     <div class="row mt-3 ml-3">
       <h4 class="bg-dark">座席情報入力</h4>
     </div>
@@ -44,6 +43,5 @@
   <div class="mt-5 text-center">
     <%= f.submit "確認画面へ", class: "btn btn-primary", style: "width: 30%" %>
   </div>
-    <% end %>
-  </div>
+  <% end %>
 </div>
