--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <div class="row mt-5">
-    <h3>注文履歴</h3>
+    <h3 class="bg-dark">注文履歴</h3>
   </div>
-  <table class="table table-borderless table-dark">
+  <table class="table table-striped table-light">
     <thead>
       <th>購入日</th>
       <th>注文番号</th>
@@ -11,7 +11,7 @@
     <% @orders.each do |order| %>
       <tbody>
         <td>
-          <%= link_to order_path(order.id), class: "text-light" do %>
+          <%= link_to order_path(order.id) do %>
             <%= order.created_at.strftime('%Y/%m/%d') %>
           <% end %>
         </td>
