--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row mt-5">
+  <div class="row mt-5 ml-3">
     <h3 class="bg-dark">注文履歴</h3>
   </div>
   <table class="table table-striped table-light">
