--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,51 +1,92 @@
 <div class="contaner">
-  <div class="row mt-5">
-    <h3 class="bg-dark ml-3">注文情報</h3>
+  <div class="row mt-5 ml-3">
+    <h3 class="bg-dark">注文情報</h3>
+  </div>
+  <% @order_details.each do |order_detail| %>
+    <% @product_total += order_detail.subtotal %>
+  <% end %>
+  <div class="row">
+    <table class="table table-striped table-light mx-auto" style="width: 85%;">
+      <tr>
+        <th>注文日</th>
+        <td><%= @order.created_at.strftime('%Y/%m/%d/%H:%M') %></td>
+      </tr>
+      <tr>
+        <th>注文番号</th>
+        <td><%= @order.order_number %></td>
+      </tr>
+      <tr>
+        <th>座席情報</th>
+        <td>
+          <span><%= @order.seat_area %></span>-
+          <span><%= @order.seat_alphabet %></span>-
+          <span><%= @order.seat_number %></span>
+        </td>
+      </tr>
+      <tr>
+        <th>支払い方法</th>
+        <td>クレジットカード</td>
+      </tr>
+      <tr>
+        <th>注文状況</th>
+        <td><%= @order.order_status_i18n %></td>
+      </tr>
+    </table>
+  </div>
+  <div class="row mt-3">
+    <table class="table table-striped table-light mx-auto" style="width: 85%;">
+      <tr>
+        <th>商品合計</th>
+        <td class="text-right"><%= @product_total.to_s(:delimited) %>円</td>
+      </tr>
+      <tr>
+        <th>送料</th>
+        <td class="text-right">200円</td>
+      </tr>
+      <tr>
+        <th>請求金額合計</th>
+        <td class="text-right"><strong><%= @order.total_price.to_s(:delimited) %>円</strong></td>
+      </tr>
+    </table>
+  </div>
+  <div class="card mt-3 p-2 mx-auto" style="width: 90%;">
+    <div class="row">
+    <% @order_details.each do |order_detail| %>
+      <div class="card p-1 mt-1 mb-1 text-dark mx-auto" style="width: 90%;">
+          <div class="row">
+            <div class="col-4">
+              <div class="card-img-top"><%= image_tag order_detail.item.image, style: "width: 100%;" %></div>
+            </div>
+            <div class="col-8">
+              <h5 class="card-title long-name"><%= order_detail.item.name %></h5>
+              <div class="row">
+                <div class="col-7">
+                  <p>価格 <%= order_detail.item.with_tax_price.to_s(:delimited) %> 円</p>
+                </div>
+                <div class="col-5">
+                  <p class="text-right">数量: <%= order_detail.amount %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <div style= "border: dashed 1px;"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <h5 class="text-left">小計</h5>
+            </div>
+            <div class="col-6">
+              <h5 class= "text-right"><strong><%= order_detail.subtotal.to_s(:delimited) %> 円</strong></h5>
+            </div>
+          </div>
+      </div>
+    <% end %>
+    </div>
   </div>
   <div class="row">
-    <div class="card w-75 mx-auto">
-      <table class="table table-striped table-light">
-        <tr>
-          <th>注文日</th>
-          <td><%= @order.created_at.strftime('%Y/%m/%d/%H:%M') %></td>
-        </tr>
-        <tr>
-          <th>座席情報</th>
-          <td>
-            <span><%= @order.seat_area %></span>-
-            <span><%= @order.seat_alphabet %></span>-
-            <span><%= @order.seat_number %></span>
-          </td>
-        </tr>
-        <tr>
-          <th>支払い方法</th>
-          <td>クレジットカード</td>
-        </tr>
-        <tr>
-          <th>注文状況</th>
-          <td><%= @order.order_status_i18n %></td>
-        </tr>
-      </table>
-    </div>
+    <h5 style="margin-bottom: 100px;"></h5>
   </div>
-  <div class="row mt-3">
-    <div class="card w-75 mx-auto">
-      <table class="table table-striped table-light">
-        <tr>
-          <th>商品合計</th>
-          <td class="text-right"><%= @product_total.to_s(:delimited) %>円</td>
-        </tr>
-        <tr>
-          <th>送料</th>
-          <td class="text-right">200円</td>
-        </tr>
-        <tr>
-          <th>請求金額合計</th>
-          <td class="text-right"><strong><%= @order.total_price.to_s(:delimited) %>円</strong></td>
-        </tr>
-      </table>
-    </div>
-  </div>
-  <div class="row mt-3">
-    <% @order_details.each do |order_detail| %>
 </div>
