--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -59,13 +59,13 @@
       <p class="text-dark mx-auto">クレジットカード</p>
     </div>
   </div>
-  <div class="card mt-3 p-2">
+  <div class="card mt-3 p-2 mx-auto">
     <div class="row ml-3">
       <h4 class="bg-dark">購入商品</h4>
     </div>
     <div class="row">
       <% @cart_items.each do |cart_item| %>
-        <div class="card m-2 p-2 mt-3 text-dark">
+        <div class="card p-1 mt-1 mb-1 text-dark mx-auto" style="width: 90%;">
           <div class="row">
             <div class="col-4">
               <div class="card-img-top"><%= image_tag cart_item.item.image, style: "width: 100%;" %></div>
