--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-  <div class="row">
-    <h3>店舗一覧</h3>
+  <div class="row mt-5">
+    <h3 class="bg-dark">店舗一覧</h3>
   </div>
   <div class="row mt-3">
-    <table class="table table-hover">
+    <table class="table table-border table-light  table-striped table-hover">
       <thead>
         <th width="15%">店舗画像</th>
         <th width="35%">店舗名</th>
@@ -21,6 +21,8 @@
         </tbody>
       <% end %>
     </table>
-
+  </div>
+  <div class="row">
+    <h5 style="margin-bottom: 100px;"></h5>
   </div>
 </div>
