--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,56 +1,58 @@
 <div class="container">
   <div class="row mt-5">
-    <h2><%= @item.name %></h2>
+    <h2 class="bg-dark"><%= @item.name %></h2>
   </div>
-  <div class="row mt-5 mb-5">
-    <div class="col-md-4">
-      <%= image_tag @item.get_image(300,300) %>
+  <div class="card p-2">
+    <div class="row mt-5 mb-5">
+      <div class="col-md-4">
+        <%= image_tag @item.get_image(300,300) %>
+      </div>
+      <div class="col-md-8">
+        <table class="table table-borderless">
+          <tr>
+            <th width="20%">商品説明</th>
+            <td width="80%"><%= @item.explanation %></td>
+          </tr>
+          <tr>
+            <th>カテゴリー</th>
+            <td><%= @item.category.name %></td>
+          </tr>
+          <tr>
+            <th>値段</th>
+            <td><%= @item.without_tax.to_s(:delimited) %>(税込 <%= @item.with_tax_price.to_s(:delimited) %>) 円</td>
+          </tr>
+          <tr>
+            <th>販売ステータス</th>
+            <td>
+              <% if @item.is_active == true %>
+                <span class="text-success font-weight-bold">販売中</span>
+              <% else %>
+                <span class="text-secondary font-weight-bold">販売停止中</span>
+              <% end %>
+            </td>
+          </tr>
+          <tr>
+            <th>在庫数</th>
+            <td><%= @item.stock %></td>
+          </tr>
+          <tr>
+            <th>売上数</th>
+            <td><%= @item.earning %></td>
+          </tr>
+        </table>
+      </div>
     </div>
-    <div class="col-md-8">
-      <table class="table table-borderless">
-        <tr>
-          <th width="20%">商品説明</th>
-          <td width="80%"><%= @item.explanation %></td>
-        </tr>
-        <tr>
-          <th>カテゴリー</th>
-          <td><%= @item.category.name %></td>
-        </tr>
-        <tr>
-          <th>値段</th>
-          <td><%= @item.without_tax.to_s(:delimited) %>(税込 <%= @item.with_tax_price.to_s(:delimited) %>) 円</td>
-        </tr>
-        <tr>
-          <th>販売ステータス</th>
-          <td>
-            <% if @item.is_active == true %>
-              <span class="text-success font-weight-bold">販売中</span>
-            <% else %>
-              <span class="text-secondary font-weight-bold">販売停止中</span>
-            <% end %>
-          </td>
-        </tr>
-        <tr>
-          <th>在庫数</th>
-          <td><%= @item.stock %></td>
-        </tr>
-        <tr>
-          <th>売上数</th>
-          <td><%= @item.earning %></td>
-        </tr>
-      </table>
+    <% if current_admin_store.owner_flag == false %>
+    <div class="row">
+      <div class="col-md-3 offset-md-4">
+        <%= link_to "編集する", edit_admin_store_item_path(current_admin_store.id, @item.id), class: "btn btn-success", style: "width: 70%" %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to "削除する", admin_store_item_path(current_admin_store.id, @item.id), method: :delete, class: "btn btn-danger", style: "width: 70%", data: {confirm: "削除しますか？"} %>
+      </div>
     </div>
+    <% end %>
   </div>
-  <% if current_admin_store.owner_flag == false %>
-  <div class="row">
-    <div class="col-md-3 offset-md-4">
-      <%= link_to "編集する", edit_admin_store_item_path(current_admin_store.id, @item.id), class: "btn btn-success", style: "width: 70%" %>
-    </div>
-    <div class="col-md-3">
-      <%= link_to "削除する", admin_store_item_path(current_admin_store.id, @item.id), method: :delete, class: "btn btn-danger", style: "width: 70%", data: {confirm: "削除しますか？"} %>
-    </div>
-  </div>
-  <% end %>
   <div class="row">
     <div style="margin-bottom: 100px;"></div>
   </div>
