--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row mt-5">
-    <h2>注文履歴一覧</h2>
+    <h2 class="bg-dark">注文履歴一覧</h2>
   </div>
   <div class="row">
-    <table class="table table-hover">
+    <table class="table table-border table-light  table-striped table-hover">
       <thead>
         <th>購入日時</th>
         <th>注文番号</th>
