--- a/app/views/admin/stores/show.html.erb
+++ b/app/views/admin/stores/show.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <% if @store.owner_flag == false %>
   <div class="row mt-5 mb-1">
-    <h2 class="mr-5"><%= @store.name %></h2>
+    <h2 class="bg-dark mr-5"><%= @store.name %></h2>
   </div>
   <div class="row">
     <div class="col-md-3">
       <div class="ml-5 mr-5"><%= image_tag @store.get_image(200,200) %></div>
     </div>
     <div class="col-md-3">
-      <table class="table table-borderless mt-5">
+      <table class="table table-border table-light  table-striped table-hover mt-5">
         <tr>
           <th>販売エリア</th>
           <td><%= @store.sale_area.name %></td>
@@ -17,22 +17,17 @@
           <th>販売商品数</th>
           <td><%= @store.items.count %></td>
         </tr>
-        <tr>
-          <th></th>
-          <td>
-            <% if current_admin_store.owner_flag == true %>
-              <%= link_to "注文履歴", admin_store_orders_path(@store.id), class: "btn btn-warning" %>
-            <% end %>
-          </td>
-        </tr>
       </table>
+      <% if current_admin_store.owner_flag == true %>
+        <%= link_to "注文履歴", admin_store_orders_path(@store.id), class: "btn btn-warning" %>
+      <% end %>
     </div>
   </div>
   <div class="row mt-5 mb-1">
-    <h4>販売商品一覧</h4>
+    <h4 class="bg-dark">販売商品一覧</h4>
   </div>
   <div class="row">
-    <table class="table table-hover">
+    <table class="table table-border table-light  table-striped table-hover">
       <thead>
         <th width="15%">商品画像</th>
         <th width="25%">商品名</th>
