--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,8 @@
 <div class="container">
   <div class="row" style="margin-top: 300px; height: 50px;">
+    <%= link_to 'ゲストログイン', customers_guest_sign_in_path, class: "btn btn-secondary mx-auto w-50 sign_in", style: "line-height: 50px;", method: :post %>
+  </div>
+  <div class="row" style="margin-top: 50px; height: 50px;">
     <%= link_to "会員登録", new_customer_registration_path, class: "btn btn-primary mx-auto w-50", style: "line-height: 50px;" %>
   </div>
   <div class="row" style="margin-top: 50px; height: 50px;">
