--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
         </ul>
       </div>
     </nav>
-  <% else %>
+  <% elsif customer_signed_in? %>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #a6ce39">
       <a class="navbar-brand" href="/">StadiumGourmet</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,6 +53,10 @@
           <% end %>
         </ul>
       </div>
+    </nav>
+  <% else %>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #a6ce39">
+      <a class="navbar-brand" href="/">StadiumGourmet</a>
     </nav>
   <% end %>
 </header>
