--- a/app/views/public/categories/show.html.erb
+++ b/app/views/public/categories/show.html.erb
@@ -5,18 +5,20 @@
   <div class="row">
     <% @items.each do |item| %>
     <div class="col-6 mt-3">
-      <div class="card">
-        <%= link_to store_item_path(item.store_id, item.id), class: "text-dark" do %>
-          <div class="card-img-top"><%= image_tag item.image, style: "width: 100%;" %></div>
-          <h5 class="card-title long-name"><%= item.name %></h5>
-          ￥ <%= item.with_tax_price.to_s(:delimited) %>
-          <table class="table table-borderless table-sm" style="table-layout: fixed;">
-            <tr>
-              <th width="20%"><i class="fas fa-store-alt"></i></th>
-              <td class="long-name" width="80%"><%= item.store.name %></td>
-            </tr>
-          </table>
-        <% end %>
+      <div class="row">
+        <div class="card mx-auto" style="width: 95%;">
+          <%= link_to store_item_path(item.store_id, item.id), class: "text-dark" do %>
+            <div class="card-img-top"><%= image_tag item.image, style: "width: 100%;" %></div>
+            <h5 class="card-title long-name"><%= item.name %></h5>
+            ￥ <%= item.with_tax_price.to_s(:delimited) %>
+            <table class="table table-borderless table-sm" style="table-layout: fixed;">
+              <tr>
+                <th width="20%"><i class="fas fa-store-alt"></i></th>
+                <td class="long-name" width="80%"><%= item.store.name %></td>
+              </tr>
+            </table>
+          <% end %>
+        </div>
       </div>
     </div>
     <% end %>
