[Fix]顧客注文完了画面レイアウト

--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,12 +1,18 @@
 <div class="container">
   <div class="row mt-5">
-    <h3 style="margin: 0 auto; margin-top: 100px;">注文完了</h3>
-  </div>
-  <div class="row mb-5">
-    <h5 style="margin: 0 auto;">ご注文ありがとうございました！</h5>
-  </div>
-  <div class="row mt-5">
-    <h5 style="margin: 0 auto;">只今より商品準備に取り掛かります。</h5>
-    <h5 style="margin: 0 auto;">商品到着までご自身の席にてお待ちください。</h5>
+    <div class="card m-2 text-dark p-3 mt-5 mx-auto" style="width: 90%;">
+      <div class="row">
+        <h1 style="margin: 0 auto;">注文完了</h1>
+      </div>
+      <div class="row mb-5 m-3 mx-auto">
+        <h4>ご注文ありがとうございました！</h4>
+      </div>
+      <div class="row mt-5 m-3 mx-auto">
+        <h4>只今より商品準備に取り掛かります。</h4>
+      </div>
+      <div class="row mx-auto">
+        <h4>商品到着までご自身の席にてお待ちください。</h4>
+      </div>
+    </div>
   </div>
 </div>
