--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,11 +4,43 @@
 
 
 header {
+  background-image: url("/assets/ykyujo.png");
+  background-size: cover;
   z-index: 9999;
-  width: 100vw;
-  position: fixed; /* ウィンドウを基準に画面に固定 */
-  top: 0; /* 上下の固定位置を上から0pxにする */
-  left: 0; /* 左右の固定位置を左から0pxにする */
+  height: 100vh;
+}
+
+header #logo {
+	width: 100%;	/*画像の幅*/
+	position: absolute;
+	bottom: 50%;
+}
+
+#menubar {
+	position: absolute;
+	bottom: 20%;	/*ロゴやメニューが入っているブロックに対して、下からの配置場所の指定。*/
+	left: 0px;
+	width: 100%;
+	text-align: center;
+}
+
+#menubar li {
+	display: inline-block;
+	margin: 0 1%;
+	animation-name: opa1;
+	animation-delay: 1S;
+	animation-duration: 1S;
+	animation-fill-mode: both;
+}
+
+#menubar li a {
+	text-decoration: none;
+	display: block;
+	text-align: center;
+	width: 140px;	/*メニューの幅*/
+	color: #fff;	/*文字色*/
+	border-bottom: 2px solid transparent;	/*下線の幅、線種、色。transparentは透明の事。*/
+	padding-bottom: 7px;	/*下線と文字の間にとる余白*/
 }
 
 footer {
@@ -18,12 +50,9 @@ footer {
 
 body {
   color: #00FF00;
-  background-image: url("/assets/ykyujo.png");
-  background-position: bottom;
-  background-size: cover;
+  background: #f1ebe7;
   width: 100vw;
   height: 100vh;
-  position: relative;
   font-family: "You Gothic Medium", "游ゴシック Medium", "YuGothic", "游ゴシック体", "ヒラギノ角ゴ Pro W3", sans-seril;
 }
 
