--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,8 +55,18 @@
       </div>
     </nav>
   <% else %>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #a6ce39">
-      <a class="navbar-brand" href="/">StadiumGourmet</a>
-    </nav>
+  <h1 id="logo" class="text-center">
+    <a href="/">StadiumGourmet</a>
+  </h1>
+  <nav id="menubar">
+    <ul>
+      <li>
+        <a href="new">New Gourmet</a>
+      </li>
+      <li>
+        <a href="ranking">Gourmet Ranking</a>
+      </li>
+    </ul>
+  </nav>
   <% end %>
 </header>
