[Fix]顧客トップページレイアウト

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -58,13 +58,13 @@
   <h1 id="logo" class="text-center">
     <a href="/">StadiumGourmet</a>
   </h1>
-  <nav id="menubar">
-    <ul>
+  <nav id="menubar" class="w-100 text-center">
+    <ul style="list-style: none; padding-left: 0;">
       <li>
-        <a href="new">New Gourmet</a>
+        <a href="#new">New Gourmet</a>
       </li>
       <li>
-        <a href="ranking">Gourmet Ranking</a>
+        <a href="#ranking">Gourmet Ranking</a>
       </li>
     </ul>
   </nav>
