--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -8,6 +8,7 @@ header {
   background-size: cover;
   z-index: 9999;
   height: 100vh;
+  position: relative;
 }
 
 header #logo {
@@ -20,28 +21,8 @@ header #logo {
 	position: absolute;
 	bottom: 20%;	/*ロゴやメニューが入っているブロックに対して、下からの配置場所の指定。*/
 	left: 0px;
-	width: 100%;
-	text-align: center;
 }
 
-#menubar li {
-	display: inline-block;
-	margin: 0 1%;
-	animation-name: opa1;
-	animation-delay: 1S;
-	animation-duration: 1S;
-	animation-fill-mode: both;
-}
-
-#menubar li a {
-	text-decoration: none;
-	display: block;
-	text-align: center;
-	width: 140px;	/*メニューの幅*/
-	color: #fff;	/*文字色*/
-	border-bottom: 2px solid transparent;	/*下線の幅、線種、色。transparentは透明の事。*/
-	padding-bottom: 7px;	/*下線と文字の間にとる余白*/
-}
 
 footer {
   position: absolute;
