--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,47 +26,29 @@
         </ul>
       </div>
     </nav>
-  <% elsif customer_signed_in? %>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #a6ce39">
-      <a class="navbar-brand" href="/">StadiumGourmet</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <%= link_to "新着グルメ", new_gourmets_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "グルメランキング", rankings_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "グルメ検索", searches_path, class: 'nav-link' %>
-          </li>
-          <% if customer_signed_in? %>
-            <li class="nav-item">
-              <%= link_to "注文履歴", orders_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link' %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-    </nav>
-  <% else %>
-  <h1 id="logo" class="text-center">
-    <a href="/">StadiumGourmet</a>
-  </h1>
-  <nav id="menubar" class="w-100 text-center">
-    <ul style="list-style: none; padding-left: 0;">
-      <li>
-        <a href="#new">New Gourmet</a>
-      </li>
-      <li>
-        <a href="#ranking">Gourmet Ranking</a>
-      </li>
-    </ul>
-  </nav>
-  <% end %>
 </header>
+  <% elsif customer_signed_in? %>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #a6ce39">
+    <a class="navbar-brand" href="/">StadiumGourmet</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to "グルメ検索", searches_path, class: 'nav-link' %>
+        </li>
+        <% if customer_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "注文履歴", orders_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link' %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
+</header>
+<% end %>
