--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -17,7 +17,7 @@
     <div class="row mt-2">
       <p class="text-dark mx-auto">ご自身の座席番号を入力してください。</p>
     </div>
-    <%= form_with model: @order, url: orders_confirm_path, mathod: :post do |f| %>
+    <%= form_with model: @order, url: orders_confirm_path do |f| %>
     <div class="row mt-3">
       <div class="col-8 mx-auto text-dark">
         <%= f.label :座席エリア %><br />
@@ -39,9 +39,9 @@
     <div class="row">
       <div class="mx-auto text-danger"><%= alert %></div>
     </div>
+    <div class="mt-5 text-center">
+      <%= f.submit "確認画面へ", class: "btn btn-primary", style: "width: 30%;" %>
+    </div>
+    <% end %>
   </div>
-  <div class="mt-5 text-center">
-    <%= f.submit "確認画面へ", class: "btn btn-primary", style: "width: 30%" %>
-  </div>
-  <% end %>
 </div>
