--- a/app/views/public/rankings/index.html.erb
+++ b/app/views/public/rankings/index.html.erb
@@ -7,7 +7,7 @@
       <div class="row">
       <%= link_to store_item_path(item.store_id, item.id), class: "text-dark" do %>
         <div class="col-12">
-          <div class="card-img-top"><%= image_tag item.image, style: "width: 100%;" %></div>
+          <div class="card-img-top"><%= image_tag item.image, style: "width: 100%; height: 120px;" %></div>
         </div>
         <div class="col-12 mt-1">
           <h4><strong><%= item.name %></strong></h4>
