--- a/app/views/public/stores/show.html.erb
+++ b/app/views/public/stores/show.html.erb
@@ -30,9 +30,9 @@
     <% @items.each do |item| %>
       <div class="col-6 mt-3">
         <div class="row">
-          <div class="card mx-auto" style="width: 95%">
+          <div class="card mx-auto" style="width: 95%;">
             <%= link_to store_item_path(@store.id, item.id), class: "text-dark" do %>
-              <div class="card-img-top"><%= image_tag item.image, style: "width: 100%;" %></div>
+              <div class="card-img-top"><%= image_tag item.image, style: "width: 100%; height: " %></div>
               <h5 class="card-title long-name"><%= item.name %></h5>
               ￥ <%= item.with_tax_price.to_s(:delimited) %>
             <% end %>
