--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,16 +37,17 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <%= link_to "グルメ検索", searches_path, class: 'nav-link' %>
+          <%= link_to "グルメを探す", searches_path, class: 'nav-link' %>
         </li>
-        <% if customer_signed_in? %>
-          <li class="nav-item">
-            <%= link_to "注文履歴", orders_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link' %>
-          </li>
-        <% end %>
+        <li class="nav-item">
+          <%= link_to "カート", cart_items_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "注文履歴", orders_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link' %>
+        </li>
       </ul>
     </div>
   </nav>
