[Fix]顧客トップページ色変更

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,19 +1,19 @@
 <header id="home">
   <h1 id="logo" class="text-center">
-    <a href="/">StadiumGourmet</a>
+      <a class="p-2 bg-dark" style="color: #a6ce39;" href="/">StadiumGourmet</a>
   </h1>
   <nav id="menubar" class="w-100 text-center">
     <ul style="list-style: none; padding-left: 0;">
       <% unless customer_signed_in? %>
         <li>
-          <a href="#rogin">Log In</a>
+          <a style="color: #a6ce39;" href="#rogin">Log In</a>
         </li>
       <% end %>
       <li>
-        <a href="#new">New Gourmet</a>
+        <a style="color: #a6ce39;" href="#new">New Gourmet</a>
       </li>
       <li>
-        <a href="#ranking">Gourmet Ranking</a>
+        <a style="color: #a6ce39;" href="#ranking">Gourmet Ranking</a>
       </li>
     </ul>
   </nav>
