--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -6,6 +6,7 @@
 header #home {
   background-image: url("/assets/ykyujo.png");
   background-size: cover;
+  background-position: center;
   z-index: 9999;
   height: 100vh;
   position: relative;
