[Fix]seed初期データ

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -20,7 +20,7 @@
 </header>
 <div class="container">
   <% unless customer_signed_in? %>
-  <section id="rogin">
+  <section id="rogin" style="height: 100vh;">
     <div class="row mt-5 mb-3">
       <h3 class="mx-auto bg-dark">ログイン</h3>
     </div>
