--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container" style="margin-top: 100px;">
-  <div class="card p-2 text-dark">
+  <div class="card p-2 mt-5 text-dark">
     <div class="row">
       <div class="col-12">
         <div class="card-img-top"><%= image_tag @item.image, style: "width: 100%;" %></div>
@@ -29,4 +29,7 @@
     </div>
     <% end %>
   <% end %>
+  <div class="row">
+    <h5 style="margin-bottom: 100px;"></h5>
+  </div>
 </div>
