--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header>
+<header class="head">
   <!--店舗ログイン時-->
   <% if admin_store_signed_in? %>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #c22a1f">
@@ -28,7 +28,7 @@
     </nav>
 </header>
   <% elsif customer_signed_in? %>
-<header>
+<header class="head">
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #a6ce39">
     <a class="navbar-brand" href="/">StadiumGourmet</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
