--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container" style="margin-top: 100px;">
   <div class="row mt-5">
-    <h3 class="bg-dark">カート</h3>
+    <h3>カート</h3>
   </div>
   <% if @cart_items.blank? %>
-  <div class="row">
+  <div class="row mt-3">
     <h4 class="text-danger mx-auto">カートに商品が入っていません。</h4>
   </div>
   <% else %>
