--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,8 +1,8 @@
-<div class="container">
-  <div class="row mt-5 ml-3">
-    <h3 class="bg-dark">注文履歴</h3>
+<div class="container" style="margin-top: 100px;">
+  <div class="row mt-5">
+    <h3>注文履歴</h3>
   </div>
-  <table class="table table-striped table-light">
+  <table class="table table-striped table-light mt-3">
     <thead>
       <th>購入日</th>
       <th>注文番号</th>
