--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="container"  style="margin-top: 100px;">
   <div class="row mt-5">
-    <h3 class="bg-dark">注文情報入力</h3>
+    <h3>注文情報入力</h3>
   </div>
-  <div class="card">
+  <div class="card mt-3">
     <div class="row mt-3 ml-3">
-      <h4 class="bg-dark">支払い方法</h4>
+      <h4 class="subtitle">支払い方法</h4>
     </div>
     <div class="row mt-2 mb-3">
       <p class="text-dark mx-auto">クレジットカード</p>
@@ -12,7 +12,7 @@
   </div>
   <div class="card mt-3">
     <div class="row mt-3 ml-3">
-      <h4 class="bg-dark">座席情報入力</h4>
+      <h4 class="subtitle">座席情報入力</h4>
     </div>
     <div class="row mt-2">
       <p class="text-dark mx-auto">ご自身の座席番号を入力してください。</p>
@@ -39,9 +39,12 @@
     <div class="row">
       <div class="mx-auto text-danger"><%= alert %></div>
     </div>
-    <div class="mt-5 text-center">
+    <div class="mt-5 mb-5 text-center">
       <%= f.submit "確認画面へ", class: "btn btn-primary", style: "width: 30%;" %>
     </div>
     <% end %>
+  </div>
+  <div class="row">
+    <h5 style="margin-bottom: 100px;"></h5>
   </div>
 </div>
