--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,12 +1,12 @@
-<div class="contaner">
-  <div class="row mt-5 ml-3">
-    <h3 class="bg-dark">注文情報</h3>
+<div class="contaner" style="margin-top: 100px;">
+  <div class="row mt-5">
+    <h3>注文情報</h3>
   </div>
   <% @order_details.each do |order_detail| %>
     <% @product_total += order_detail.subtotal %>
   <% end %>
   <div class="row">
-    <table class="table table-striped table-light mx-auto" style="width: 85%;">
+    <table class="table table-striped table-light mx-auto mt-3" style="width: 85%;">
       <tr>
         <th>注文日</th>
         <td><%= @order.created_at.strftime('%Y/%m/%d/%H:%M') %></td>
