--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row mt-5">
-    <h3 class="bg-dark">会員登録</h3>
+    <h3>会員登録</h3>
   </div>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <div class="row mt-3">
