--- a/app/views/public/stores/index.html.erb
+++ b/app/views/public/stores/index.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container" style="margin-top: 100px;">
   <div class="row mt-5 mb-3">
-    <h3 class="bg-dark">店舗一覧</h3>
+    <h3>店舗一覧</h3>
   </div>
   <div class="row">
     <% @stores.each do |store| %>
