--- a/app/views/public/stores/show.html.erb
+++ b/app/views/public/stores/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container" style="margin-top: 100px;">
-  <div class="card p-2 text-dark">
+  <div class="card p-2 mt-5 text-dark">
     <div class="row">
       <div class="col-12">
         <div class="card-img-top"><%= image_tag @store.image, style: "width: 100%;" %></div>
@@ -23,8 +23,8 @@
       </div>
     </div>
   </div>
-  <div class="row mt-3">
-    <h4 class="bg-dark">販売商品一覧</h4>
+  <div class="row mt-5">
+    <h4 class="subtitle">販売商品一覧</h4>
   </div>
   <div class="row">
     <% @items.each do |item| %>
