[Fix]管理者側レイアウト不具合修正

--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="row mt-5">
-    <h2 class="bg-dark">注文履歴一覧</h2>
-  </div>
   <div class="row">
+    <h2 class="bg-light">注文履歴一覧</h2>
+  </div>
+  <div class="row mt-3">
     <table class="table table-border table-light  table-striped table-hover">
       <thead>
         <th>購入日時</th>
