--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-  <div class="row mt-5">
-    <h2 class="bg-dark">注文履歴詳細</h2>
-  </div>
   <div class="row">
-    <table class="table table-border table-light table-striped table-hover">
+    <h2 class="bg-light">注文履歴詳細</h2>
+  </div>
+  <div class="row mt-3">
+    <table class="table table-border table-light table-striped table-hover w-50 ml-3">
       <tr>
         <th>注文番号</th>
         <td><%= @order.order_number %></td>
@@ -41,7 +41,7 @@
   </div>
   <div class="row mt-2">
     <div class="col-md-9">
-      <table class="table table-border table-light  table-striped table-hover">
+      <table class="table table-border table-light table-striped table-hover">
         <thead>
           <th></th>
           <th>商品名</th>
@@ -61,7 +61,7 @@
         <% end %>
       </table>
     </div>
-    <div class="col-md-3 mt-5">
+    <div class="col-md-3">
       <table class="table table-border table-light  table-striped table-hover">
         <tr>
           <th>商品合計</th>
@@ -77,5 +77,8 @@
         </tr>
       </table>
     </div>
+  </div>
+  <div class="row">
+    <h5 style="margin-bottom: 100px;"></h5>
   </div>
 </div>
