--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="row mt-5">
-    <h2 class="bg-dark">商品編集</h2>
+  <div class="row">
+    <h2 class="bg-light">商品編集</h2>
   </div>
-  <div class="card p-3 mt-5">
+  <div class="card p-3 mt-3">
     <div class="row">
       <div class="col-md-10 offset-md-2">
         <%= form_with model: [@store, @item], url: admin_store_item_path, method: :patch do |f| %>
