--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row mt-5">
-    <h2 class="bg-dark">商品新規登録</h2>
+  <div class="row">
+    <h2 class="bg-light">商品新規登録</h2>
   </div>
   <div class="card p-3">
     <div class="row">
