--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row mt-5">
-    <h2 class="bg-dark"><%= @item.name %></h2>
+  <div class="row">
+    <h2 class="bg-light"><%= @item.name %></h2>
   </div>
   <div class="card p-2">
     <div class="row mt-5 mb-5">
