--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row mt-5">
-    <h3 class="bg-dark">店舗一覧</h3>
+    <h2 class="bg-light">店舗一覧</h2>
   </div>
   <div class="row mt-3">
     <table class="table table-border table-light  table-striped table-hover">
