--- a/app/views/admin/stores/show.html.erb
+++ b/app/views/admin/stores/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <% if @store.owner_flag == false %>
-  <div class="row mt-5 mb-1">
-    <h2 class="bg-dark mr-5"><%= @store.name %></h2>
+  <div class="row mb-1">
+    <h2 class="bg-light"><%= @store.name %></h2>
   </div>
   <div class="row">
     <div class="col-md-3">
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="row mt-5 mb-1">
-    <h4 class="bg-dark">販売商品一覧</h4>
+    <h4 class="subtitle">販売商品一覧</h4>
   </div>
   <div class="row">
     <table class="table table-border table-light  table-striped table-hover">
@@ -55,6 +55,9 @@
         </tbody>
       <% end %>
     </table>
+  </div>
+  <div class="row">
+    <h5 style="margin-bottom: 100px;"></h5>
   </div>
   <% else %>
   <h1>管理人</h1>
