--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,11 @@
 
   <body>
     <%= render 'layouts/header' %>
+    <div class="flash-notifications">
+      <% flash.each do |key, value| %>
+       <%= content_tag(:div, value, class: key) %>
+      <% end %>
+    </div>
     <main>
       <%= yield %>
     </main>
