--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -12,7 +12,7 @@
       </div>
     </div>
   </div>
-  <% if customer_signed_in? %>
+  <% unless current_customer.nickname == "guestuser" %>
     <%= form_with model: @cart_item, url: cart_items_path, method: :post do |f| %>
     <div class="row mt-3">
       <div class="col-4 mx-auto">
