--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row mt-5">
     <h3>会員登録</h3>
   </div>
-  <%= form_with model: @customer, url: customer_session_path, method: :post do |f| %>
+  <%= form_with model: @customer, url: customer_registration_path, method: :post do |f| %>
   <div class="row mt-3">
     <div class="col-8 mx-auto">
       <%= f.label :ニックネーム %><br />
