--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 100px;">
+<div class="container">
   <div class="row mt-5">
     <h3>注文情報確認</h3>
   </div>
