--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container"  style="margin-top: 100px;">
+<div class="container">
   <div class="row mt-5">
     <h3>注文情報入力</h3>
   </div>
@@ -35,9 +35,6 @@
         <%= f.label :座席番号 %><br />
         <%= f.select :seat_number, *[1..100], { include_blank: "番号を選択" }, class: "form-control" %>
       </div>
-    </div>
-    <div class="row">
-      <div class="mx-auto text-danger"><%= alert %></div>
     </div>
     <div class="mt-5 mb-5 text-center">
       <%= f.submit "確認画面へ", class: "btn btn-primary", style: "width: 30%;" %>
