--- a/app/views/public/stores/show.html.erb
+++ b/app/views/public/stores/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 100px;">
+<div class="container">
   <div class="card p-2 mt-5 text-dark">
     <div class="row">
       <div class="col-12">
