[Update]新規会員登録日本語化

--- a/app/views/admin/data_graphs/index.html.erb
+++ b/app/views/admin/data_graphs/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row mt-5">
-    <h2>データ</h2>
+  <div class="row">
+    <h2 class="bg-light">データ</h2>
     <%= column_chart @items.pluck(:name, :earning), xtitle: "商品名", ytitle: "売上数" %>
   </div>
 </div>
