--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row mt-5">
+  <div class="row">
     <h2 class="bg-light">店舗一覧</h2>
   </div>
   <div class="row mt-3">
