--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,10 +11,10 @@
           <li class="nav-item">
             <%= link_to "ログアウト", destroy_admin_store_session_path, method: :delete, class: 'nav-link' %>
           </li>
-          <li class="nav-item">
-            <%= link_to "店舗ページ", admin_store_path(current_admin_store), class: 'nav-link' %>
-          </li>
           <% if current_admin_store.owner_flag == false %>
+            <li class="nav-item">
+              <%= link_to "店舗ページ", admin_store_path(current_admin_store), class: 'nav-link' %>
+            </li>
             <li class="nav-item">
               <%= link_to "商品登録", new_admin_store_item_path(current_admin_store.id), class: 'nav-link' %>
             </li>
@@ -23,6 +23,11 @@
             </li>
             <li class="nav-item">
               <%= link_to "データ確認", admin_store_data_graphs_path(current_admin_store.id), class: 'nav-link' %>
+            </li>
+          <% end %>
+          <% if current_admin_store.owner_flag. == true %>
+            <li class="nav-item">
+              <%= link_to "店舗一覧", admin_stores_path, class: 'nav-link' %>
             </li>
           <% end %>
         </ul>
