--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -2,6 +2,7 @@
   <div class="row mt-5">
     <h3>会員登録</h3>
   </div>
+  <%= render "layouts/errors", obj: @customer %>
   <%= form_with model: @customer, url: customer_registration_path, method: :post do |f| %>
   <div class="row mt-3">
     <div class="col-8 mx-auto">
